feat: Update and refactor GemsEconomy plugin
This commit updates the GemsEconomy plugin to be compatible with modern Minecraft versions (1.21+) and implements several improvements and fixes.

- Updated plugin metadata:
  - Changed groupId to `com.minekarta`
  - Changed artifactId and plugin name to `GemsEconomyReloaded`
  - Set author to `Minekarta Studio`
  - Updated the description in `pom.xml` and `plugin.yml`.

- Modernized the codebase:
  - Updated the API dependency from Spigot to Paper 1.21.
  - Set the Java version to 17.
  - Replaced all deprecated `ChatColor` usages with the modern Adventure API (`NamedTextColor`, `LegacyComponentSerializer`).
  - Refactored deprecated method calls in the Vault integration to use `OfflinePlayer` and UUID-based lookups instead of player names.
  - Fixed other various deprecation warnings, including `plugin.getDescription()` and `new URL()`.
  - Addressed a server hang on shutdown by making the database connection close asynchronously.

- Improved documentation:
  - Completely overhauled the `README.md` to be a comprehensive guide, including features, setup, commands, permissions, and API usage.

- Build process:
  - Cleaned up build artifacts from the repository.
  - Ensured the plugin compiles successfully without errors or significant warnings.